<resources>
    <string name="app_name">Weather</string>
    <string name="some_action">Some action</string>
    <string name="show_some_weather">Show some weather</string>
    <string name="update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_refresh">Refresh</string>
    <string name="feel_like">feel like %s</string>
    <string name="pressure">"pressure: %s mm Hg"</string>
    <string name="wind_speed">"wind speed: %s m / s"</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="connected">connected</string>
    <string name="connection_lost">connection lost</string>
    <string name="connected_to">connected to %s</string>
    <string name="server_error">Server error</string>
    <string name="corrupted_data">Corrupted data</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="weather_details">Weather details</string>
    <string name="contacts">Contacts</string>
    <string name="title_of_request_permission_to_contact_access">Requesting permission to contacts access.</string>
    <string name="explanation_of_request_permission_to_contact_access">"Explanation"</string>
    <string name="close">Close</string>
    <string name="grant_access">Grant access</string>
    <string name="do_not">Do not</string>
    <string name="map">Map</string>
    <string name="button_search_map">Search</string>
    <string name="hint_address_enter">Enter a address</string>
    <string name="warning_not_found_location_on_text_search">Location \'%s\' not found.</string>
    <string name="channel_name">Channel name</string>
    <string name="chanel_description">Channel description</string>
</resources>