<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.brauer.weather.ui.main.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_details"
        android:name="ru.brauer.weather.ui.main.details.DetailsFragment"
        android:label="@string/weather_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="ru.brauer.weather.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="ru.brauer.weather.ui.contacts.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_app_settings"
        android:name="ru.brauer.weather.ui.appsettings.AppSettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_app_settings" />

</navigation>